Fix label spacing

--- a/src/styles/components/labels.scss
+++ b/src/styles/components/labels.scss
@@ -4,7 +4,7 @@
   }
 
   .tag {
-    margin: 0.5em;
+    margin: .5rem 0 .5rem .5rem;
     background: darken($background, 5);
 
     &.disabled {
